@@ -18,8 +18,8 @@ my $logging_p = "-DCPSDebugLevel 1 -ORBVerboseLogging 1 " .
     "-DCPSTransportDebugLevel 1";#6 -DCPSDebugLevel 10";
 my $logging_s = "-DCPSDebugLevel 1 -ORBVerboseLogging 1 " .
     "-DCPSTransportDebugLevel 1";#6 -DCPSDebugLevel 10";
-my $pub_opts = "$logging_p -ORBLogFile pub.log ";
-my $sub_opts = "$logging_s -ORBLogFile sub.log ";
+my $pub_opts = "$logging_p -ORBLogFile pub.log -DCPSPendingTimeout 1 ";
+my $sub_opts = "$logging_s -ORBLogFile sub.log -DCPSPendingTimeout 1 ";
 my $repo_bit_opt = '';
 my $reliable = 1;
 
